# Poseidon

./: .gitattributes  .gitignore  README.md  _access.sh  _jupyter.sh  _models.sh  access.sh  environment.yml  error.txt  folders_init.sh  jupyter.sh  jupyter_info.sh  jupyter_launch.sh  pre-commit.yml  pyproject.toml  requirements.txt  script_folder_initialization.sh  script_run_jupyter.sh
aang/: era5_data_yannis.ipynb
configs/: cluster.yml  cluster_mean.yml  experiments-1-A.yml  experiments-1-B.yml  experiments-1-C.yml  experiments-1.yml  experiments-10-A.yml  experiments-10-B.yml  experiments-10-C.yml  experiments-2.yml  experiments-20-A.yml  experiments-20-B.yml  experiments-20-C.yml  experiments-3.yml  experiments-30-A.yml  experiments-30-B.yml  experiments-30-C.yml  experiments-4.yml  experiments-40-A.yml  experiments-40-B.yml  experiments-40-C.yml  experiments-5.yml  local.yml  testing.yml
exploration/: diffusion.ipynb  diffusion_conditionnal.ipynb
information/: data.txt  data_local.txt  grid_T.txt  mask.txt  ptrc_T.txt  useless.txt
jobs/: distributions.sbatch  generate.sbatch  generate_n.sbatch  generate_s.sbatch  jupyter.sbatch
logs/: jupiter_notebook.err
notebooks/: TFE.ipynb  esa-diffusion.ipynb  esa.ipynb  poseidon.ipynb
paths/: data_ptrc_T.txt
poseidon/: config.py  date.py  diffusion.py  math.py  nn.py  preprocessing.py  tools.py  training.py  utils.py
scripts/: preprocessing.sh  run_download.py  run_preprocessing.py  run_statistics.py  run_training.py
setup/: folder_initialization.sh
src/: __ init __.py  dataloader.py  dataset.py  dataset_distribution.py  dataset_evolution.py  dawgz_distribution.py  distribution.py  script_distribution.py  script_evolution.py  script_illustrate.py  script_tools.py  tools.py
(+137 files in other folders)
